Fix of lint and checkstyle warnings.